# fa860

./: .dockerignore  .gitlab-ci.yml  Dockerfile.bridge  Jenkinsfile  README.md  docker-compose.feiniu.yml  hacs.json  pyproject.toml
custom_components/fa860/: __init__.py  config_flow.py  icons.json  manifest.json  number.py  services.yaml  strings.json  switch.py
docs/: reverse-engineering.md
examples/: fa860.example.json
src/fa860_control/: __init__.py  cli.py  client.py  config.py  experimental.py  home_assistant.py  protocol.py  windows_setupapi.py
src/fa860_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fa860_control/transports/: base.py  ble_transport.py  hid_transport.py  mock.py  serial_transport.py
tests/: test_client.py  test_experimental.py  test_home_assistant.py  test_protocol.py  test_windows_setupapi.py
